docs: add JDB debugger usage details and commands to README
- Documented debugger setup and execution for both Deliverable 1 (console) and Deliverable 2 (JavaFX GUI)
- Included compilation and run commands with breakpoints and inspection steps
- Added reference link to official JDB documentation
- Listed proof screenshot file names for verification